--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+		<link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 		<script type="javascript" src="assets/javascript/game.js"></script>
@@ -24,37 +26,63 @@
 		<header>
 
 			<h2>A Series of Unfortunate Events</h2>
-			<h1>HANGMAN</h1>
+
+				<h1>HANGMAN</h1>	
 
 		</header>
 
 
 
-		<section> <!-- contains image, wins, correct answer and quote from book-->
+		<section id="imageAndQuote"> <!-- contains image, wins, correct answer and quote from book-->
+			<div class="row">
 
-			<img src="" alt="book cover" width="400">
+				<div class="col-sm-3">
+					<img class="img-responsive" src="assets/images/CountOlafInCage.jpg" alt="book cover" width="300">
+				</div> <!-- end of col 1 -->
 
-			<div id="wins">
-			</div>
+				<div class="col-sm-9" id="winsAndQuote">
+					<div id="wins">
+						<h3>YOU:<span id="winsCount">0</span></h3>
+						<h3>COUNT OLAF:<span id="lossesCount">0</span></h3>
+					</div>
 
-			<div id="correctAnswer">
-			</div>
+					<div id="correctAnswer">
+						<h3>Press any letter to make your first guess.</h3>
+					</div>
 
-			<div id="quote">
-			</div>
+					<div id="quote">
+						<p>“In this book, not only is there no happy ending, there is no happy beginning and very few happy things in the middle.”<br>
+						<em>― Lemony Snicket, <u>The Bad Beginning</u></em></p>
+					</div>
+				</div> <!-- end of col 2 -->
+			</div> <!--end of row -->
 
 		</section>
 
-		<section> <!-- contains blank spaces for current word, #of guesses remaining and letters already guessed-->
+		<section id="blanksAndGuesses"> <!-- contains blank spaces for current word, #of guesses remaining and letters already guessed-->
+			<div class="row">
+
+				<div class="col-sm-10 col-sm-offset-1">
 			
-			<div id="blanks">
-			</div>
+					<div id="blanks">
+						<h3><em>Blanks spaces go here</em></h3>
+					</div>
 
-			<div id="remainingGuesses">
-			</div>
+					<div id="remainingGuesses">
+						<h3>You have <span id="guessesLeft"><strong>20</strong></span> guesses remaining</h3>
+					</div>
 
-			<div id="lettersGuessed">
-			</div>
+					<div id="lettersGuessed">
+						<h3>You have already guessed:</h3>
+					</div>
+
+				</div> <!-- end of col -->
+
+				<div class="col-sm-1">
+					
+				</div> <!-- blank col to center -->
+
+			</div> <!-- end of row -->
 
 		</section>
 
