--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 				<div class="col-sm-2">
 				</div>
 
-				<div class="col-sm-3 counter">
+				<div id="winCounter" class="col-sm-3 counter">
 					<h3>YOU<br><span id="winsCount">0</span></h3>
 				</div> <!--end of wins column -->
 
 				<div class="col-sm-2">
 				</div>
 
-				<div class="col-sm-3 counter">
+				<div id="lossCounter" class="col-sm-3 counter">
 					<h3>COUNT OLAF<br><span id="lossesCount">0</span></h3>
 				</div> <!--end of losses column -->
 
