add arrays to js not done:sweat:

--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
 				<div class="col-sm-9" id="winsAndQuote">
 
 					<div id="quote">
-						<p>“In this book, not only is there no happy ending, there is no happy beginning and very few happy things in the middle.”<br>
-						<em>― Lemony Snicket, <u>The Bad Beginning</u></em></p>
+						<p>“There are many, many types of books in the world, which makes good sense, because there are many, many types of people, and everybody wants to read something different.”<br><em>― Lemony Snicket, <u>The Bad Beginning</u></em></p>
 					</div>
 	
 					<div id="blanks">
-						<h3><em>Blanks spaces go here</em></h3>
+						<h3 id="blankSpaces"><em>Blanks spaces go here</em></h3>
 					</div>
 
 					<div id="remainingGuesses">
