blanks display randomly:relieved:

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 		<link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
 
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-		<script type="javascript" src="assets/javascript/game.js"></script>
+
 
 	</head>
 
@@ -56,7 +54,7 @@
 			<div class="row">
 
 				<div class="col-sm-3">
-					<h3 id="answer">Press any letter to make your first guess.</h3>
+					<h3 id="answer">Press any letter to make your first guess</h3>
 					<img class="img-responsive" src="assets/images/CountOlafInCage.jpg" alt="book cover" width="300">
 				</div> <!-- end of col 1 -->
 
@@ -67,7 +65,7 @@
 					</div>
 	
 					<div id="blanks">
-						<h3 id="blankSpaces"><em>Blanks spaces go here</em></h3>
+						<h3 id="blankSpaces"><em>Click here to start</em></h3>
 					</div>
 
 					<div id="remainingGuesses">
@@ -83,9 +81,13 @@
 
 		</main>
 
-	
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<script src="assets/javascript/game.js"></script>	
 		
-			
+		
+		
 					
 
 					
