add guesses left counter and letters guessed field, work on changing to uppercase and letters only

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 					</div>
 
 					<div id="remainingGuesses">
-						<h3>You have <span id="guessesLeft"><strong>20</strong></span> guesses remaining</h3>
+						<h3>You have <span id="guessesLeft"><strong>15</strong></span> guesses remaining</h3>
 					</div>
 
 					<div id="lettersGuessed">
-						<h3>You have already guessed:</h3>
+						<h3>You have already guessed:<br><span id="guesses"></span></h3>
 					</div>
 	
 				</div> <!-- end of col 2 -->
