can match input with existing letter and get index:lollipop:

--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
 
 				<div class="col-sm-3">
 					<h3 id="answer">Press any letter to make your first guess</h3>
-					<img class="img-responsive" src="assets/images/CountOlafInCage.jpg" alt="book cover" width="300">
+					<img id="bookCover" class="img-responsive" src="assets/images/CountOlafInCage.jpg" alt="book cover" width="300">
 				</div> <!-- end of col 1 -->
 
 				<div class="col-sm-9" id="winsAndQuote">
 
-					<div id="quote">
+					<section id="quote">
 						<p>“There are many, many types of books in the world, which makes good sense, because there are many, many types of people, and everybody wants to read something different.”<br><em>― Lemony Snicket, <u>The Bad Beginning</u></em></p>
-					</div>
+					</section>
 	
-					<div id="blanks">
-						<h3 id="blankSpaces"><em>Click here to start</em></h3>
-					</div>
+					<section id="blanks">
+						<h3 id="blankSpaces"><em>Click here to start new game</em></h3>
+					</section>
 
-					<div id="remainingGuesses">
+					<section id="remainingGuesses">
 						<h3>You have <span id="guessesLeft"><strong>15</strong></span> guesses remaining</h3>
-					</div>
+					</section>
 
-					<div id="lettersGuessed">
+					<section id="lettersGuessed">
 						<h3>You have already guessed:<br><span id="guesses"></span></h3>
-					</div>
+					</section>
 	
 				</div> <!-- end of col 2 -->
 			</div> <!--end of row -->
