small style changes

--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
 
 			<h2>A Series of Unfortunate Events</h2>
 			<h1>HANGMAN</h1>
-
 			<div class="row">
+				
+				<div class="col-sm-3"></div>
 
-				<div class="col-sm-2">
-				</div>
-
-				<div id="winCounter" class="col-sm-3 counter">
+				<div id="winCounter" class="col-sm-2 counter">
 					<h3>YOU<br><span id="winsCount">0</span></h3>
 				</div> <!--end of wins column -->
 
-				<div class="col-sm-2">
-				</div>
+				<div class="col-sm-2"></div>
 
-				<div id="lossCounter" class="col-sm-3 counter">
+				<div id="lossCounter" class="col-sm-2 counter">
 					<h3>COUNT OLAF<br><span id="lossesCount">0</span></h3>
 				</div> <!--end of losses column -->
+
 
 			</div> <!-- end of header row -->
 				
